lombok-plugin/src/main/java/de/plushnikov/intellij/plugin/language/lombokConfig.bnf
{
  parserClass="de.plushnikov.intellij.plugin.language.parser.LombokConfigParser"
  stubParserClass="de.plushnikov.intellij.plugin.language.psi.GeneratedParserUtilBase"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="LombokConfig"
  psiImplClassSuffix="Impl"
  psiPackage="de.plushnikov.intellij.plugin.language.psi"
  psiImplPackage="de.plushnikov.intellij.plugin.language.psi.impl"

  elementTypeHolderClass="de.plushnikov.intellij.plugin.language.psi.LombokConfigTypes"
  elementTypeClass="de.plushnikov.intellij.plugin.language.psi.LombokConfigElementType"
  tokenTypeClass="de.plushnikov.intellij.plugin.language.psi.LombokConfigTokenType"

  psiImplUtilClass="de.plushnikov.intellij.plugin.language.psi.LombokConfigPsiUtil"
}

simpleFile ::= item_*

private item_ ::= (property|cleaner|COMMENT|CRLF)

property ::= (KEY operation VALUE) {methods=[getKey getValue]}
operation ::= SIGN? SEPARATOR
cleaner ::= (CLEAR KEY) {methods=[getKey]}
